--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "alkhwlani/xss-middleware": "^2.0",
         "backpack/crud": "4.1.*",
         "backpack/permissionmanager": "^6.0",
+        "barryvdh/laravel-dompdf": "^2.0",
         "consoletvs/charts": "6.*",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
